--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -10,13 +10,13 @@ vagrantfile:
         network:
             private_network: 10.1.1.52
             forwarded_port:
-                8a90PCx3D60w:
+                vflnp_ken7yw15ln8x:
                     host: '8080'
                     guest: '80'
-                Pq2lW8OcJRoo:
+                vflnp_2ux1znfge9n0:
                     host: '8081'
                     guest: '6081'
-                Gd8ro9Jnnf4h:
+                vflnp_m894rsemocmy:
                     host: '8022'
                     guest: '22'
         post_up_message: ''
@@ -38,7 +38,7 @@ vagrantfile:
                     - '--hiera_config /vagrant/puphpet/puppet/hiera.yaml'
                     - '--parser future'
         synced_folder:
-            vflsf_7y0qcwzxkk4l:
+            vflsf_eq8j5pn7bvq4:
                 source: ./
                 target: /var/www
                 sync_type: nfs
@@ -91,7 +91,7 @@ nginx:
         proxy_buffers: '4 256k'
     upstreams: {  }
     vhosts:
-        nxv_7nyc2144dk90:
+        nxv_9fnn6e77exgy:
             server_name: awesome.dev
             server_aliases:
                 - www.awesome.dev
@@ -131,7 +131,7 @@ apache:
             ssl_chain: ''
             ssl_certs_dir: ''
             directories:
-                avd_earu060ib46r:
+                avd_201i1iad24lg:
                     path: /var/www
                     options:
                         - Indexes
@@ -156,7 +156,7 @@ apache:
             ssl_chain: ''
             ssl_certs_dir: ''
             directories:
-                avd_278l8gff0q4z:
+                avd_9cc2hnnl4c3w:
                     path: /var/www/phpMemcachedAdmin
                     options:
                         - Indexes
