--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 	  	"stof/doctrine-extensions-bundle": "~1.1@dev",
         "friendsofsymfony/jsrouting-bundle": "~1.5",
         "vich/uploader-bundle": "0.14.*",
-        "liip/imagine-bundle": "~1.2"
+        "liip/imagine-bundle": "~1.2",
+        "coresphere/console-bundle": "0.1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
