--- a/src/Darkwood/HearthstatsBundle/Resources/config/host_routing.yml
+++ b/src/Darkwood/HearthstatsBundle/Resources/config/host_routing.yml
@@ -8,5 +8,5 @@ deck_list:
     path: /decks/public
 
 deck_detail:
-    path: /decks/{slug}/public_show
+    path: /decks/{slug}
     defaults: { locale: 'en' }
