--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=86e5550357fdbcadb63986b8a0067cd6
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://admin:admin@127.0.0.1:5432/hearthbreaker?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
