:sparkles: uncraftable cards

--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=86e5550357fdbcadb63986b8a0067cd6
+APP_HS_REPLAY_REGION=
+APP_HS_REPLAY_ACCOUNT=
+APP_HS_REPLAY_SESSION_ID=
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
