--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app.region: '%env(APP_HS_REPLAY_REGION)%'
+    app.account: '%env(APP_HS_REPLAY_ACCOUNT)%'
+    app.session_id: '%env(APP_HS_REPLAY_SESSION_ID)%'
 
 services:
     # default configuration for services in *this* file
